# haphazard

./: .gitignore  Icon.psd  README.txt  game.bat  haphazard_log_18_01_09_18_15_03.csv  haphazard_log_18_01_10_09_46_00.csv  haphazard_log_18_01_10_10_16_58.csv  haphazard_log_18_01_10_18_44_15.csv  haphazard_log_18_01_11_21_06_10.csv
game/: 1512163420_AutoSave.json  1512164042_AutoSave.json  1512352086_AutoSave.json  1515551406_AutoSave.json  1515551713_AutoSave.json  1515606687_AutoSave.json  1515606989_AutoSave.json  1515607321_AutoSave.json  1515607905_AutoSave.json  1515621609_AutoSave.json  1515622907_AutoSave.json  1515623489_AutoSave.json  1515624006_AutoSave.json  1515632962_AutoSave.json  1515734274_AutoSave.json  1515734580_AutoSave.json  1515734887_AutoSave.json  1515735209_AutoSave.json  1515735523_AutoSave.json  1515735831_AutoSave.json  1515736208_AutoSave.json  1515736769_AutoSave.json  1515737439_AutoSave.json  1515737856_AutoSave.json  1515738165_AutoSave.json  1515738481_AutoSave.json  1515783648_AutoSave.json  1515784035_AutoSave.json  1515784354_AutoSave.json  1516243269_AutoSave.json  1516244684_AutoSave.json  1516245029_AutoSave.json  1516245505_AutoSave.json  1516415809_AutoSave.json  1516928480_AutoSave.json  1517450517_AutoSave.json  1517450949_AutoSave.json  1517451553_AutoSave.json  1517457595_AutoSave.json  1517458556_AutoSave.json  (+69 more)
game/shaders/: background.frag  background.geo  background.vert  debug.frag  debug.fragshader  debug.geo  debug.geoshader  debug.vert  debug.vertshader  editorsprite.frag  editorsprite.vert  light.frag  light.vert  (+34 more)
(+447 files in other folders)
